# inspect_swe

./: pyproject.toml
docs/: mitmproxy_bridge_e2e.md
docs/superpowers/specs/: 2026-03-24-mitmproxy-bridge-design.md
examples/mitmproxy_e2e/: compose.yaml  task.py
examples/mitmproxy_live_smoke/: task.py
src/inspect_swe/_bridge/: __init__.py  addon.py  ca.py  hosts.py  ipc.py  mcp_tool_server.py  mitmproxy_bridge.py  oauth.py  parsers.py  runtime.py
src/inspect_swe/_claude_code/: claude_code.py
src/inspect_swe/_codex_cli/: codex_cli.py
src/inspect_swe/_gemini_cli/: gemini_cli.py
src/inspect_swe/acp/: agent.py
src/inspect_swe/acp/_agents/claude_code/: claude_code.py
src/inspect_swe/acp/_agents/codex_cli/: codex_cli.py
src/inspect_swe/acp/_agents/gemini_cli/: gemini_cli.py
tests/: mitmproxy_e2e_utils.py  test_mitmproxy_agent_config.py  test_mitmproxy_bridge.py  test_mitmproxy_e2e.py  test_mitmproxy_live_smoke.py
