[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "inspect_swe"
dynamic = ["version"]
description = "Software engineering agents for Inspect AI."
authors = [{ name = "Meridian Labs" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
dependencies = [
    "httpx",
    "inspect_ai>=0.3.185",
    "nest_asyncio",
    "platformdirs",
    "pydantic>=2.11.4",
    "pyyaml",
    "sniffio",
    "anyio",
    "typing_extensions>=4.9.0",
    "agent-client-protocol",
]

[project.urls]
Documentation = "https://meridianlabs-ai.github.io/inspect_swe/"
"Source Code" = "https://github.com/meridianlabs-ai/inspect_swe"
"Issue Tracker" = "https://github.com/meridianlabs-ai/inspect_swe/issues"

[project.entry-points.inspect_ai]
inspect_swe = "inspect_swe._registry"


[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "anthropic",
    "openai",
    "pytest-dotenv",
    "types-PyYAML",
    "IPython",
    "inspect-evals",
    "inspect_k8s_sandbox",
    "mini-swe-agent"
]
doc = ["quarto-cli==1.7.31"]
mitmproxy = [
    "mitmproxy>=10.0",
    "mcp>=1.23.0",
]

[tool.hatch.build]
only-packages = true
exclude = ["docs/", "tests/"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/inspect_swe/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version" # Important for PyPI compatibility

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
extend-exclude = ["docs"]
src = ["."]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # flake8
    "D",      # pydocstyle
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM101", # duplicate isinstance
    # "RET", # flake8-return
    # "RUF", # ruff rules
]
ignore = ["E203", "E501", "D10", "D212", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
python_executable = ".venv/bin/python"
